<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_pot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniellee.myapplication.AddPotActivity">

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        android:layout_alignBaseline="@+id/ok_button"
        android:layout_alignBottom="@+id/ok_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/pot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/pot_name_text"
        android:textSize="25sp"/>

    <TextView
        android:text="@string/pot_weight_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/pot_weight_text"
        android:textSize="25sp"
        android:layout_below="@+id/pot_name_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name_defined_by_user"
        android:hint="@string/name"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/pot_name_text"
        android:layout_alignBottom="@+id/pot_name_text"
        android:layout_alignLeft="@+id/weight_defined_by_user"
        android:layout_alignStart="@+id/weight_defined_by_user"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/weight_defined_by_user"
        android:hint="@string/weight"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/pot_weight_text"
        android:layout_alignBottom="@+id/pot_weight_text"
        android:layout_toRightOf="@+id/pot_weight_text"
        android:layout_toEndOf="@+id/pot_weight_text"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/ok_button"
        android:layout_below="@+id/weight_defined_by_user"
        android:layout_alignLeft="@+id/weight_defined_by_user"
        android:layout_alignStart="@+id/weight_defined_by_user" />
</RelativeLayout>
