<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniellee.myapplication.CalculateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/pot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pot"
            android:textSize="20sp" />

        <TextView
            android:text="@string/weight_empty_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_empty"
            android:textSize="20sp"
            android:layout_marginTop="0dp" />

        <TextView
            android:text="@string/weight_with_food_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_with_food"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <TextView
            android:text="@string/weight_of_food_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_of_food"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <TextView
            android:text="@string/of_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_servings"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <TextView
            android:text="@string/serving_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serving_weight"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pot_UI"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_empty_UI"
            android:textSize="20sp"
            android:layout_marginTop="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weight_with_food_UI"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_of_food_UI"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:hint="food weight" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_of_servings_UI"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/serving_weight_UI"
            android:hint="@string/total"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="3dp" />

    </LinearLayout>

    <Button
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:layout_marginBottom="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
